--- a/app/views/demands/index.html.haml
+++ b/app/views/demands/index.html.haml
@@ -1,6 +1,6 @@
 = image_tag @user.logo.url(:small), :id => 'logo'
 
-%h3= @user.name
+%h3= @user.name.titleize
 
 %h4#pending_reviews Pending Reviews
 
