--- a/app/views/reviews/_company_greyed.html.haml
+++ b/app/views/reviews/_company_greyed.html.haml
@@ -1,3 +1,3 @@
 %span#greyed
-	%span.bold= review.company
+	%span.bold= review.company.titleize
 = link_to_remote "unhide", :url => { :controller => 'reviews', :action => 'unhide_company', :id => review.id }
