--- a/app/views/demands/_demand.html.haml
+++ b/app/views/demands/_demand.html.haml
@@ -1,15 +1,15 @@
 %li
 	%span.bold Name:
-	= demand.name
+	= demand.name.titleize
 	%br
 	%span.bold Email:
 	= demand.email
 	%br
 	%span.bold Company:
-	= demand.company
+	= demand.company.titleize
 	%br
 	%span.bold Project:
-	= demand.work
+	= demand.work.titleize
 	%p
 	%span{:id => "reminder_link_#{demand.id}"}
 		= link_to_remote "Send an email reminder", :url => { :controller => 'demands', :action => 'send_email', :id => demand.id }
