--- a/app/views/reviews/_name_greyed.html.haml
+++ b/app/views/reviews/_name_greyed.html.haml
@@ -1,3 +1,3 @@
 %span#greyed
-	%span.bold= review.name
+	%span.bold= review.name.titleize
 = link_to_remote "unhide", :url => { :controller => 'reviews', :action => 'unhide_name', :id => review.id }
