--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -1,10 +1,10 @@
 %li
 
-	%h3= review.work.capitalize
+	%h3= review.work.titleize
 	By
 	- if current_user != @user && !review.name_hidden?
 		%span{:id => "name_#{review.id}"}
-			%span.bold= review.name
+			%span.bold= review.name.titleize
 	- elsif current_user == @user && review.name_hidden?
 		%span{:id => "name_#{review.id}"}
 			= render :partial => 'reviews/name_greyed', :locals => { :review => review }
@@ -15,7 +15,7 @@
 		at
 	- if current_user != @user && !review.company_hidden?
 		%span{:id => "company_#{review.id}"}
-			%span.bold= review.company
+			%span.bold= review.company.titleize
 	- elsif current_user == @user && review.company_hidden?
 		%span{:id => "company_#{review.id}"}
 			= render :partial => 'reviews/company_greyed', :locals => { :review => review }
