#47 Shortened paths and improved consistency of url structure

--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -13,4 +13,4 @@ You can get a badge like this one to link your website to your profile, just cop
 
 Alternatively, you can just use the following link to get to share your profile.
 %br
-= link_to "http://testifyapp.com/#{current_user.handle}", user_path(current_user)
+= link_to "http://testifyapp.com/#{current_user.handle}", short_user_path(current_user)
