--- a/app/views/demands/new.html.haml
+++ b/app/views/demands/new.html.haml
@@ -24,4 +24,4 @@
 	%p
 		= f.submit "Continue", :id => 'save_button'
 
-		= link_to 'Cancel', user_path(current_user), :id => 'cancel_link'
+		= link_to 'Cancel', short_user_path(current_user), :id => 'cancel_link'
