--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -43,4 +43,4 @@
 	%br
 	Overall quality:
 	%span.bold= "#{review.quality_of_service + 1}/5"
-
+	%p= link_to 'Permalink', short_user_review_path(@user, review)
