--- a/app/views/reviews/new.html.haml
+++ b/app/views/reviews/new.html.haml
@@ -75,4 +75,4 @@
 		Awful
 	%p
 		= f.submit "Continue", :id => 'save_button'
-		= link_to 'Cancel', user_path(@demand.user), :id => 'cancel_link'
+		= link_to 'Cancel', short_user_path(@demand.user), :id => 'cancel_link'
