--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -22,7 +22,14 @@
 		= f.label :logo, 'Upload an image or logo'
 		%br
 		= f.file_field :logo
+	%p.divider
+		= f.label :tusername, 'Twitter username'
+		%br
+		= f.text_field :tusername
+	%p
+		= f.label :tpassword, 'Twitter password'
+		%br
+		= f.password_field :tpassword
 	%p
 		= f.submit "Update", :id => 'save_button'
 		= link_to 'Cancel', user_path(@user), :id => 'cancel_link'
-
