--- a/app/views/notifier/demand.html.haml
+++ b/app/views/notifier/demand.html.haml
@@ -7,6 +7,9 @@
 	has requested feedback from you for the following project:
 	%br
 	%b= @demand.work.titleize
+	
+%p
+	%b= @demand.custom_text
 
 %p
 	To let them know what you thought, go to:
