--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,13 +1,14 @@
 
 
-%h2#tagline
-	Testify helps you win more business and improve your service, simply by collecting testimonials from your clients. 
+.upper
+	%h2#tagline
+		Testify helps you win more business and improve your service, simply by collecting testimonials from your clients. 
 
 -#	With Testify you can collect testimonials from clients. close more deals.
 -#  Testify is the new platform to get your customer's opinions. By collecting short &amp; simple testimonials from your previous clients, you can improve your service, and use your reviews to prove your potential and close more deals.
 
 
-#email_form
+.lower#email_form
 	%h3 We're in closed beta!
 	-	form_for(@email) do |f|
 		- f.error_messages
