--- a/app/views/emails/new.html.haml
+++ b/app/views/emails/new.html.haml
@@ -1,8 +1,10 @@
--	form_for(@email) do |f|
-	= f.error_messages :header_message => "Oops! There's been a bit of a problem.", :header_tag => 'h3', :message => "We had some problems with the following fields:"
-	%p
-		= f.label :address, 'Email address'
-		= f.text_field :address
-		
-	%p
-		= f.submit 'Submit'
+.upper
+	%h2 Contact
+.lower#email_form
+	-	form_for(@email) do |f|
+		%p
+			= f.text_field :address, :value => 'Email address'
+			= f.submit 'Submit'
+			%br
+			%span.microtext#no_spam We won't spam you - promise!
+
