--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,39 +1,35 @@
-
-#testify_logo {
-	margin-left: 12px;
-	padding-bottom: 15px;
-}
-
-#greyed {
-	color: #aaa;
-}
-
-	float: right;
-	display: block;
-	margin-top: -13px;
-}
-
-.permalink {
-	float: right;
-	display: block;
-	margin-top: -9px;
-}
-
-ul#reviews li .permalink a {
-	text-decoration: none;
+body {
+	font-family: Verdana, Arial, Helvetica;
+	font-size: 14px;
+	color: #fff;
+	background: #c7c2bb url('../images/gradient.png') top center no-repeat;
 }
 
 a {
-	text-decoration: none;
-	color: #1F2A34;
+	color: #fff;
 }
 
-#big_name {
-	display: inline;
+h2 {
+	font-size: 24px;
+	text-shadow: 1px 1px 1px #666;
+	font-weight: 600;
 }
 
-body {
-	background-color: #fafafa;
+h3 {	
+	font-family: Verdana, Arial, Helvetica;
+	font-size: 24px;
+	text-shadow: 1px 1px 1px #666;
+	font-weight: 100;
+}
+
+h4 {
+	font-size: 14px;
+	color: #36434a;
+	font-weight: 100;
+}
+
+.microtext {
+	font-size: 10px;
 }
 
 #page {
@@ -42,231 +38,151 @@ body {
 	margin-right: auto;
 }
 
-#content {
-	margin-top: 10px;
-	background-color: #fff;
-	border: 2px solid #ddd;
-	padding: 10px;
-	padding-bottom: 10px;
-}
-
-#footer {
-	margin-top: 10px;
-	margin-left: 12px;
-}
-
-li {
- list-style-type: none;
- background-color: #ffd;
- border: solid 2px #FFE98F;
- padding: 5px;
- width: 562px;
- margin-top: 20px;
-}
-
-ul#navigation li {
-	display: inline;
-	background: none;
-	border: none;
-	border-right: 3px #ddd double;
-	font-size: 14px;
-	height: 14px;
-	line-height: 14px;
-	padding: 0 4px 0 4px;
-	width: auto;
-}
-
-ul#navigation li#last {
-	border-right: none;
-}
-
-ul#navigation {
-	margin-left: -28px;
-}
-
-ul#navigation li a:hover {
-	color: #64001C;
-}
-
-ul#reviews {
-	margin-top: 158px;
-	margin-left: -40px;
-}
-
-ul#reviews li a {
-	text-decoration: underline;
-	color: #64001C;
-}
-
-ul#demands {
-	margin-top: 115px;
-	margin-left: -40px;
-}
-
-ul#demands li a {
-	text-decoration: underline;
-}
-
-h4#pending_reviews {
-	float: left;
-	margin-top: -10px;
-}
-
 .divider {
-	border-top: 1px #ccc solid;
+	border-top: 1px solid #999;
 	padding-top: 10px;
 }
 
-#logo {
-	float: right;
-	border: 2px #eee solid;
-}
-
-.compulsory {
-	color: #8a1f11;
-}
-
-#averages {
-	border: 2px solid #C6D880;
-	background-color: #E6EFC2;
-	color: #264409;
-	padding: 5px;
-	float: left;
-	font-size: 14px;
-	line-height: 18px;
-	width: 375px;
-}
-
-#averages h4 {
-	margin-top: 0;
-	line-height: 16px;
-	margin-bottom: -10px;
-}
-
-#email_form {
-	background: #C5DCF6;
-	border: 2px solid #8299B3;
-	color: #1F2A34;
-	padding: 2px 10px 0px 10px;
+.flash {
+	color: #000;
 	margin-top: 20px;
-	font-size: 14px;
+	padding: 10px 10px 10px 20px;
 }
 
-#email_form p {
-	margin-top: 10px;
+.flash_icon {
+	padding-right: 10px;
+	margin-top: 1px;
+	float: left;
+}
+
+#success {
+	background: #a6d9a6;
+	border: 1px solid #7ecc8f;
+}
+
+#notice {
+	background: #eae89f;
+	border: 1px solid #d8d475;
+}
+
+#error {
+	background: #da9e9e;
+	border: 1px solid #a76b67;
+}
+
+#login {
+	float: right;
+	background: url('../images/login_button.png') center no-repeat;
+	color: #fff;
+	text-decoration: none;
+	font-size: 12px;
+	width: 54px;
+	height: 24px;
+	padding: 8px 0 0 15px;
+	margin-right: -7px;
+}
+
+.upper {
+	background: #3d6d8d;
+	padding: 15px 15px 15px 20px;
+	border: 1px solid #36586e;
+	margin-top: 20px;
+}
+
+.upper h2 {
+	margin-top: -1px;
+}
+
+.lower {
+	margin-top: -19px;
+	background: #a3a9ab;
+	padding: 15px 15px 15px 20px;
+	border-bottom: 1px solid #dcd9d5;
+}
+
+#email_form h3 {
+	margin-top: -1px;
 }
 
 #email_form h4 {
-	line-height: 28px;
-	margin: 0;
-	font-weight: bold;
+	margin-top: -20px;
 }
 
-#message {
-	background: #C5DCF6;
-	border: 2px solid #8299B3;
-	color: #1F2A34;
-	padding: 2px 10px 10px 10px;
-	margin-top: 10px;
-	font-size: 14px;
+#email_form input[type=text] {
+	background: url('../images/small_text_field.png') no-repeat;
+	border: none;
+	width: 434px;
+	height: 31px;
 }
 
-#message h4 {
-	color: #000;
-	margin: 0;
-	font-size: 18px;
-	line-height: 28px;
-	padding-bottom: 10px;
-}
-
-#message a {
-	color: #64001C;
-	text-decoration: underline;
-}
-
-.bold {
-	font-weight: bold;
-}
-
-.italic {
-	font-style: italic;
-}
-
-.important {
-	padding: 0;
-	margin-top: 20px;
-	line-height: 20px;
-	font-size: 14px;
-	font-weight: bold;
-}
-
-.information {
-	padding: 0;
-	margin-top: 25px;
-	line-height: 20px;
-	font-size: 14px;
-}
-
-.information h3 {
-	line-height: 0;
-	margin: 0;
-	padding-bottom:	22px;
-}
-
-#badge {
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 15px;
-	width: 252px;
-	display: block;
-	padding-bottom: 25px;
-}
-
-#review_company {
-	margin-left: 25px;
-}
-
-#review_project {
-	margin-left: 25px;
-}
-
-.fieldWithErrors {
-	display: inline;
-	padding: none;
-	margin: 0;
-	border: 0;
-}
-
-#errorExplanation ul li {
-background: #FBE3E4; color: #8a1f11; border-color: #FBC2C4;
-}
-
-#errorExplanation ul {
-	margin-left: -40px;
-}
-
-.fieldWithErrors input {
-	background-color: #FBE3E4;
-}
-
-#cancel_link {
-	color: #64001C;
-	text-decoration: underline;
-}
-
-#subtagline {
-	font-size: 20px;
-
-}
-
-ul#navigation #login {
-	border-right: none;
+#email_form input[type=submit] {
 	float: right;
 }
 
-.badge_area {
-	width: 98%;
-	height: 65px;
+#no_spam {
+	color: #36434a;
+	float: right;
+	margin-top: 5px;
+	margin-right: 4px;
 }
 
+h3#subtagline {
+	margin-left: 20px;
+}
 
+input[type=text] {
+	background: url('../images/full_text_field.png') no-repeat;
+	border: none;
+	width: 545px;
+	height: 31px;
+	font-size: 16px;
+	padding-left: 15px;
+}
+
+input[type=password] {
+	background: url('../images/full_text_field.png') no-repeat;
+	border: none;
+	width: 545px;
+	height: 31px;
+	font-size: 16px;
+	padding-left: 15px;
+}
+
+input[type=submit] {
+	background: url('../images/submit_button.png') no-repeat;
+	border: none;
+	width: 107px;
+	height: 31px;
+	font-size: 16px;
+	color: #fff;
+	cursor: pointer;
+}
+
+.review {
+	margin-top: 20px;
+	background-color: #6c8695;
+	border: 1px solid #9f9b96;
+	padding: 15px 15px 15px 20px;
+}
+
+.review h2 {
+	line-height: auto;
+	margin-top: -2px;
+}
+
+.review h2 .number {
+	color: #36434a;
+	text-shadow: none;
+}
+
+.review .review_content {
+	margin-left: 37px;
+	margin-top: -10px;
+}
+
+#footer {
+	margin-top: 25px;
+	color: #59544c;
+	float: right;
+	padding-bottom: 10px;
+}
