--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -14,7 +14,7 @@
 		Sign up
 
 	-	form_for(@user, :html => { :multipart => true }) do |f|
-		= f.error_messages :header_message => "Oops! There's been a bit of a problem.", :header_tag => 'h3', :message => "We had some problems with the following fields:"
+		= f.error_messages :header_message => nil, :header_tag => 'h3', :message => "We had some problems with the following fields:"
 		%p
 			= f.text_field :name, :value => 'Your name'
 		%p
